<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ljubica.deutschlernen.ShowWords">
    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="20"/>
    <TextView
        android:id="@+id/show_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/select_der"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_der"/>
        <Button
            android:id="@+id/select_die"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_die"/>
        <Button
            android:id="@+id/select_das"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_das"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/percent_correct_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/green"
            android:textSize="24dp"/>
        <TextView
            android:id="@+id/percent_incorrect_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:textSize="24dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:visibility="invisible"/>
</LinearLayout>
