<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.ljubica.deutschlernen.ChooseSourceFragment">
    <TextView
        android:id="@+id/text_view_choose_how_show_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_words"
        android:gravity="center_horizontal|center_vertical"/>
    <Button
        android:id="@+id/btn_choose_from_lessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_lessons"
        android:onClick="chooseFromLessons"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <Button
        android:id="@+id/btn_choose_random_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_random"
        android:onClick="chooseRandomWords"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <Button
        android:id="@+id/btn_add_new_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_word"
        android:onClick="addNewWord"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <Button
        android:id="@+id/btn_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Translation"
        android:onClick="translation"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <Button
        android:id="@+id/btn_writing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Writing"
        android:onClick="writing"
        android:layout_gravity="center_horizontal|center_vertical"/>
</LinearLayout>
